# asap_sketchlib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  const_assert_fn  features.md
.github/workflows/: ci.yml  docs.yml
.target/: .rustc_info.json
asapv1_golden/: README.md  cms_f64_fast_2x3.hex  cms_i64_regular_2x3.hex  hll_classic_p12.hex  hll_ertl_mle_p12.hex  hll_hip_p12.hex  kll_f64_k200.hex  kll_i64_k200.hex
benches/: count.rs  countmin.rs  hashlayer.rs  structured_countmin.rs
benchmark/: count_benchmark.txt  countmin_benchmark.txt
docs/: advanced_use_cases.md  apis.md  asapv1_wire_format.md  benchmark.md  common_api.md  contributors.md  examples.md  features.md  fold_sketch_design.md  hash_function_benchmark_result.txt  index.md  library_map.md  message_pack_format.md  msgpack-magic-ids.md  project_overview.md  sketch_api.md  tests.md  timeline.md  wrapper.md
docs/api/: api_cms_heap.md  api_coco.md  api_common.md  api_common_hash.md  api_common_heap.md  api_common_input.md  api_common_structures.md  api_count_sketch.md  api_countmin.md  api_cs_heap.md  api_ddsketch.md  api_ehsketchlist.md  api_ehunivoptimized.md  api_elastic.md  api_exponential_histogram.md  api_fold_cms.md  api_fold_cs.md  api_hashlayer.md  api_hydra.md  api_hyperloglog.md  api_kll.md  api_kmv.md  api_nitrobatch.md  api_octo.md  api_tumbling_window.md  api_uniform_sampling.md  api_univmon.md  api_univmon_optimized.md
examples/: cardinality_hll.rs  cardinality_merge_hll.rs  frequency_cms.rs  heavy_hitters.rs  merge_cms.rs  nitro_example.rs  quantile_kll.rs  serialize_deserialize.rs
localsketch/: countmin_metadata.json
proto/: sketchlib.proto
proto/cocosketch/: cocosketch.proto
proto/common/: common.proto
proto/countminsketch/: countminsketch.proto
proto/countsketch/: countsketch.proto
proto/ddsketch/: ddsketch.proto
proto/elasticsketch/: elasticsketch.proto
proto/hll/: hll.proto
proto/hydra/: hydra.proto
proto/kll/: kll.proto
proto/univmon/: univmon.proto
scripts/: plot_cms_guarantee.py  plot_count_guarantee.py  plot_hll_guarantee.py  plot_kll_guarantee.py  setup.sh
src/: lib.rs  message_pack_format.rs  proto.rs  test_utils.rs
src/common/: hash.rs  hashspec.rs  heap.rs  input.rs  mod.rs  numerical.rs  precompute_hash.rs  precompute_sample.rs  precompute_sample2.rs  structure_utils.rs  structures.rs
src/deserializers/: mod.rs  record.rs
src/message_pack_format/: codec.rs  countminsketch.rs  countminsketch_topk.rs  countsketch.rs  ddsketch.rs  delta_set_aggregator.rs  dto.rs  envelope.rs  error.rs  (+6 more)
testdata/: 100.timestamp  101.timestamp  102.timestamp  103.timestamp  104.timestamp  105.timestamp  106.timestamp  107.timestamp  108.timestamp  109.timestamp  110.timestamp  111.timestamp  112.timestamp  113.timestamp  114.timestamp  115.timestamp  116.timestamp  117.timestamp  118.timestamp  119.timestamp  120.timestamp  121.timestamp  122.timestamp  123.timestamp  124.timestamp  125.timestamp  126.timestamp  127.timestamp  128.timestamp  129.timestamp  130.timestamp  131.timestamp  132.timestamp  133.timestamp  134.timestamp  135.timestamp  136.timestamp  137.timestamp  138.timestamp  139.timestamp  (+62 more)
tests/: asapv1_golden.rs  chapter_composition.rs  cs_envelope_golden.hex  hll_sparse_golden.rs  msgpack_compat.rs  sketches_go_parity_probe.rs  structured_sketches.rs  xtest_consumer.rs
tools/gen-proto/: Cargo.toml
tools/gen-proto/src/: main.rs
(+163 files in other folders)
