[package]
name = "asap_sketchlib"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
rmp-serde = "1.3.0"
twox-hash = "2.1.2"
pcap = "1.1"
clap = { version = "4.0", features = ["derive"] }
smallvec = "1.13.2"
prost = "0.13"
bytes = "1"
core_affinity = "0.8"
crossbeam-channel = "0.5"

[build-dependencies]
prost-build = "0.13"

[lib]
crate-type = ["rlib"]
name = "asap_sketchlib"
path = "src/lib.rs"
bench = false

#[profile.release]
#debug = true
#strip = false
#frame-pointer = "can-use"
#lto = false
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
