[package]
name = "asap_sketchlib"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
rmp-serde = "1.3.0"
twox-hash = "2.1.2"
smallvec = "1.13.2"
prost = "0.13"
bytes = "1"
core_affinity = { version = "0.8", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[features]
default = []
octo-runtime = ["core_affinity", "crossbeam-channel"]

[build-dependencies]
prost-build = "0.13"

[lib]
crate-type = ["rlib"]
name = "asap_sketchlib"
path = "src/lib.rs"
bench = false

#[profile.release]
#debug = true
#strip = false
#frame-pointer = "can-use"
#lto = false
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
